<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layPrincipal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/lblRadio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lblRadio"
        android:textColor="@color/black"
        android:textSize="20dp" />

    <RadioGroup
        android:id="@+id/radGr"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginBottom="20dp">

        <RadioButton
            android:id="@+id/radOp1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/radOp1"
            android:textColor="@color/black"
            android:textSize="20dp" />

        <RadioButton
            android:id="@+id/radOp2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/radOp2"
            android:textColor="@color/black"
            android:textSize="20dp" />

        <RadioButton
            android:id="@+id/radOp3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/radOp3"
            android:textColor="@color/black"
            android:textSize="20dp" />
    </RadioGroup>

    <TextView
        android:id="@+id/lblCheck"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lblCheck"
        android:textColor="@color/black"
        android:textSize="20dp" />

    <CheckBox
        android:id="@+id/chkOp1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:text="@string/chkOp1"
        android:textColor="@color/black"
        android:textSize="20dp" />

    <CheckBox
        android:id="@+id/chkOp2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:text="@string/chkOp2"
        android:textColor="@color/black"
        android:textSize="20dp" />

    <TextView
        android:id="@+id/lblPrueba"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="40dp"
        android:text="@string/lblPrueba"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="38dp" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/sw1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp"
        android:minHeight="48dp"
        android:text="@string/sw1"
        android:textColor="@color/black"
        android:textSize="20dp" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/sw2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp"
        android:minHeight="48dp"
        android:text="@string/sw2"
        android:textColor="@color/black"
        android:textSize="20dp" />
</LinearLayout>